--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
     <footer class="site-footer" role="contentinfo">
       <div class="container footer-inner">
-        <div>© <span id="year"></span> eizyGroup — Campus Name</div>
+        <div>© <span id="year"></span> eizyGroup</div>
         <div>Built for fair and transparent group assignments.</div>
       </div>
     </footer>
