--- a/index.html
+++ b/index.html
@@ -43,23 +43,7 @@
         <div class="logo">
           <span class="logo-icon" aria-hidden="true">
             <!-- small badge SVG -->
-            <svg
-              width="28"
-              height="28"
-              viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg"
-              aria-hidden="true"
-            >
-              <rect width="24" height="24" rx="5" fill="#1e6fb3"></rect>
-              <path
-                d="M6.5 12.5l2 2 6-6"
-                stroke="#fff"
-                stroke-width="1.5"
-                fill="none"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              ></path>
-            </svg>
+            🧑‍🤝‍🧑
           </span>
           <span class="logo-text">eizyGroup</span>
         </div>
@@ -173,7 +157,7 @@
       <!-- Section 2: How to Use -->
       <section id="sec-howtouse" class="section">
         <div class="container">
-          <h2>How to Use eizyGroup</h2>
+          <h2 class="topic">How to Use eizyGroup</h2>
           <div class="cards-grid">
             <div class="how-card">
               <div class="card-icon">📝</div>
@@ -202,7 +186,7 @@
       <!-- Section 3: Why Use eizyGroup -->
       <section id="sec-why" class="section alt-bg">
         <div class="container">
-          <h2>Why Choose eizyGroup?</h2>
+          <h2 class="topic">Why Choose eizyGroup?</h2>
           <div class="benefits-grid">
             <div class="benefit-item">
               <h3>🎯 Bias-Free Grouping</h3>
@@ -244,7 +228,7 @@
         aria-label="Customer testimonials"
       >
         <div class="container">
-          <h2>Trusted by Educators Worldwide</h2>
+          <h2 class="topic">Trusted by Educators Worldwide</h2>
           <div class="testimonials-grid">
             <div class="testimonial-card">
               <div class="testimonial-image-container">
