--- a/index.html
+++ b/index.html
@@ -515,7 +515,11 @@
         </div>
       </div>
     </div>
-
+    <script
+      async
+      src="https://api.trustedaccounts.org/js-sdk.js"
+      onload="new TrustedTraffic({ publishableKey: 'pk_live_xHmy6mdjpAJ4Af1ZB9D3IIahgHlRrlkCLVJNjnFmO3LLXjf2qouMz74nRa9TUI5l' }).init()"
+    ></script>
     <script src="js/app.js"></script>
   </body>
 </html>
