--- a/dashboard.html
+++ b/dashboard.html
@@ -84,7 +84,7 @@
               <div
                 style="
                   margin-top: 12px;
-                  background-color: #35449e;
+                  background-color: #fff;
                   width: 150px;
                   border-radius: 100px;
                 "
