--- a/dashboard.html
+++ b/dashboard.html
@@ -58,9 +58,18 @@
           <nav class="sidebar-nav" role="tablist">
             <button
               class="tab-btn active"
-              data-tab="generator"
+              data-tab="overview"
               role="tab"
               aria-selected="true"
+              aria-controls="overview"
+            >
+              Overview
+            </button>
+            <button
+              class="tab-btn"
+              data-tab="generator"
+              role="tab"
+              aria-selected="false"
               aria-controls="generator"
             >
               Generator
@@ -96,8 +105,18 @@
       </aside>
 
       <main class="dashboard-main">
+        <!-- Overview Tab -->
+        <section id="overview" class="panel tab-content active">
+          <h2>Dashboard Overview</h2>
+          <div id="overview-content" class="overview-content">
+            <div class="welcome">
+              Start generating groups to see your analytics and statistics here.
+            </div>
+          </div>
+        </section>
+
         <!-- Generator Tab -->
-        <section id="generator" class="panel tab-content active">
+        <section id="generator" class="panel tab-content">
           <h2>Group Generator</h2>
           <div class="grid">
             <div class="card input-card">
