Google Adsense implemented

--- a/dashboard.html
+++ b/dashboard.html
@@ -13,6 +13,13 @@
     />
     <meta name="theme-color" content="#1e6fb3" />
     <title>Dashboard — eizyGroup</title>
+    <!-- Google AdSense -->
+    <meta name="google-adsense-account" content="ca-pub-2789487480341652" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2789487480341652"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preload" as="style" href="css/styles.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <noscript><link rel="stylesheet" href="css/styles.css" /></noscript>
@@ -101,6 +108,27 @@
               Logout
             </button>
           </nav>
+        </div>
+        <!-- Sidebar Ad -->
+        <div
+          class="sidebar-ad"
+          style="
+            padding: 1rem;
+            margin-top: auto;
+            border-top: 1px solid var(--border-color);
+          "
+        >
+          <ins
+            class="adsbygoogle"
+            style="display: block"
+            data-ad-client="ca-pub-2789487480341652"
+            data-ad-slot="5555555555"
+            data-ad-format="vertical"
+            data-full-width-responsive="false"
+          ></ins>
+          <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
         </div>
       </aside>
 
@@ -193,6 +221,29 @@
             >
               📥 Export as CSV
             </button>
+          </div>
+        </section>
+
+        <!-- Dashboard Ad: Between Generator and History -->
+        <section
+          style="
+            padding: 2rem 0;
+            border-top: 1px solid var(--border-color);
+            margin-top: 2rem;
+          "
+        >
+          <div style="max-width: 728px; margin: 0 auto">
+            <ins
+              class="adsbygoogle"
+              style="display: block"
+              data-ad-client="ca-pub-2789487480341652"
+              data-ad-slot="7777777777"
+              data-ad-format="horizontal"
+              data-full-width-responsive="true"
+            ></ins>
+            <script>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
           </div>
         </section>
 
