--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
       name="description"
       content="eizyGroup - Bias-free group generator for educators, facilitators, and team leaders. Create balanced groups instantly, no setup required."
     />
+    <!-- Google AdSense -->
+    <meta name="google-adsense-account" content="ca-pub-2789487480341652" />
+
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2789487480341652"
+      crossorigin="anonymous"
+    ></script>
     <meta name="og:title" content="eizyGroup — Bias-Free Group Generator" />
     <meta
       name="og:description"
@@ -34,6 +42,11 @@
       rel="icon"
       href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><rect fill='%231e6fb3' width='24' height='24' rx='4'/><path fill='%23fff' d='M6.5 12.5l2 2 6-6' stroke='%23fff' stroke-width='1.5' fill='none' stroke-linecap='round' stroke-linejoin='round'/></svg>"
     />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2789487480341652"
+      crossorigin="anonymous"
+    ></script>
     <script defer src="js/app.js"></script>
     <noscript><link rel="stylesheet" href="css/styles.css" /></noscript>
   </head>
@@ -166,6 +179,23 @@
               </g>
             </svg>
           </div>
+        </div>
+      </section>
+
+      <!-- Ad Slot 1: Top Banner Ad (Horizontal) -->
+      <section class="section ad-container">
+        <div class="container">
+          <ins
+            class="adsbygoogle"
+            style="display: block"
+            data-ad-client="ca-pub-2789487480341652"
+            data-ad-slot="1234567890"
+            data-ad-format="horizontal"
+            data-full-width-responsive="true"
+          ></ins>
+          <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
         </div>
       </section>
 
@@ -416,6 +446,23 @@
         </div>
       </section>
     </main>
+
+    <!-- Ad Slot 2: Bottom Banner Ad (Before Footer) -->
+    <section class="section ad-container">
+      <div class="container">
+        <ins
+          class="adsbygoogle"
+          style="display: block"
+          data-ad-client="ca-pub-2789487480341652"
+          data-ad-slot="9876543210"
+          data-ad-format="horizontal"
+          data-full-width-responsive="true"
+        ></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
+    </section>
 
     <footer class="site-footer" role="contentinfo">
       <div class="container footer-inner">
