--- a/dashboard.html
+++ b/dashboard.html
@@ -187,6 +187,46 @@
                 placeholder="Auto"
                 aria-label="Set students per group (leave blank for auto)"
               />
+              <div
+                style="
+                  margin-top: 1.5rem;
+                  padding: 1rem;
+                  background: #f0f4ff;
+                  border-radius: 8px;
+                  border-left: 4px solid #3f51b5;
+                "
+              >
+                <label
+                  for="gender-balance-toggle"
+                  style="
+                    display: flex;
+                    align-items: center;
+                    cursor: pointer;
+                    gap: 0.5rem;
+                  "
+                >
+                  <input
+                    type="checkbox"
+                    id="gender-balance-toggle"
+                    style="width: 18px; height: 18px; cursor: pointer"
+                    aria-label="Enable gender-balanced grouping to distribute participants evenly"
+                    title="When enabled, participants will be evenly distributed by gender"
+                  />
+                  <span style="font-weight: 600; color: #0f1724; margin: 0"
+                    >⚖️ Balance Gender Distribution</span
+                  >
+                </label>
+                <p
+                  style="
+                    font-size: 0.85rem;
+                    color: #6b7280;
+                    margin: 0.5rem 0 0 1.5rem;
+                  "
+                >
+                  Ensures both female and male participants are distributed
+                  evenly across all groups randomly
+                </p>
+              </div>
               <div class="actions">
                 <button
                   class="btn btn-primary"
@@ -441,6 +481,42 @@
       </div>
     </div>
 
+    <footer class="site-footer" role="contentinfo">
+      <div class="container footer-inner">
+        <div>© <span id="year"></span> eizyGroup</div>
+        <div>
+          <a
+            href="index.html"
+            style="color: inherit; text-decoration: none; margin: 0 1rem"
+            >Home</a
+          >
+          <a
+            href="about.html"
+            style="color: inherit; text-decoration: none; margin: 0 1rem"
+            >About</a
+          >
+          <a
+            href="faq.html"
+            style="color: inherit; text-decoration: none; margin: 0 1rem"
+            >FAQ</a
+          >
+          <a
+            href="privacy.html"
+            style="color: inherit; text-decoration: none; margin: 0 1rem"
+            >Privacy</a
+          >
+          <a
+            href="terms.html"
+            style="color: inherit; text-decoration: none; margin: 0 1rem"
+            >Terms</a
+          >
+        </div>
+      </div>
+    </footer>
+
     <script defer src="js/app.js"></script>
+    <script>
+      document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
   </body>
 </html>
