--- a/index.html
+++ b/index.html
@@ -42,11 +42,6 @@
       rel="icon"
       href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><rect fill='%231e6fb3' width='24' height='24' rx='4'/><path fill='%23fff' d='M6.5 12.5l2 2 6-6' stroke='%23fff' stroke-width='1.5' fill='none' stroke-linecap='round' stroke-linejoin='round'/></svg>"
     />
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2789487480341652"
-      crossorigin="anonymous"
-    ></script>
     <script defer src="js/app.js"></script>
     <noscript><link rel="stylesheet" href="css/styles.css" /></noscript>
   </head>
@@ -73,6 +68,13 @@
             tabindex="0"
             >Home</a
           >
+          <a href="about.html" class="nav-link" aria-label="About us">About</a>
+          <a
+            href="faq.html"
+            class="nav-link"
+            aria-label="Frequently asked questions"
+            >FAQ</a
+          >
           <a
             href="#"
             class="nav-link"
@@ -80,6 +82,7 @@
             aria-label="Login or create account"
             role="button"
             tabindex="0"
+            onclick="window.switchToLogin(); return false;"
             >Login</a
           >
           <a
@@ -467,7 +470,28 @@
     <footer class="site-footer" role="contentinfo">
       <div class="container footer-inner">
         <div>© <span id="year"></span> eizyGroup</div>
-        <div>Built for fair and transparent group assignments.</div>
+        <div>
+          <a
+            href="about.html"
+            style="color: inherit; text-decoration: none; margin: 0 1rem"
+            >About</a
+          >
+          <a
+            href="faq.html"
+            style="color: inherit; text-decoration: none; margin: 0 1rem"
+            >FAQ</a
+          >
+          <a
+            href="privacy.html"
+            style="color: inherit; text-decoration: none; margin: 0 1rem"
+            >Privacy</a
+          >
+          <a
+            href="terms.html"
+            style="color: inherit; text-decoration: none; margin: 0 1rem"
+            >Terms</a
+          >
+        </div>
       </div>
     </footer>
 
