New pages implemented

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     />
     <meta name="theme-color" content="#1e6fb3" />
     <meta
+      name="google-site-verification"
+      content="j6-DfdJtie0XlHrV4ZwdhdHJaLVLc2ozC24b6fvgDaY"
+    />
+    <meta
       name="description"
       content="eizyGroup - Bias-free group generator for educators, facilitators, and team leaders. Create balanced groups instantly, no setup required."
     />
