Add favicon and enhance logo design with professional styling

--- a/about.html
+++ b/about.html
@@ -65,10 +65,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
     <link rel="preload" as="style" href="css/styles.css" />
-    <link
-      rel="icon"
-      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><rect fill='%231e6fb3' width='24' height='24' rx='4'/><path fill='%23fff' d='M6.5 12.5l2 2 6-6' stroke='%23fff' stroke-width='1.5' fill='none' stroke-linecap='round' stroke-linejoin='round'/></svg>"
-    />
+    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="favicon.svg" />
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
       {
@@ -95,7 +93,7 @@
     <header class="site-header">
       <div class="container header-inner">
         <div class="logo">
-          <span class="logo-icon" aria-hidden="true">🧑‍🤝‍🧑</span>
+          <img src="favicon.svg" alt="eizyGroup logo" class="logo-icon" width="40" height="40" />
           <span class="logo-text">eizyGroup</span>
         </div>
         <nav class="main-nav" aria-label="Main navigation">
