--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@
     <link rel="preload" as="style" href="css/styles.css" />
     <title>eizyGroup — Bias-Free Group Generator</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link
-      rel="icon"
-      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><rect fill='%231e6fb3' width='24' height='24' rx='4'/><path fill='%23fff' d='M6.5 12.5l2 2 6-6' stroke='%23fff' stroke-width='1.5' fill='none' stroke-linecap='round' stroke-linejoin='round'/></svg>"
-    />
+    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="favicon.svg" />
     <script defer src="js/app.js"></script>
     <noscript><link rel="stylesheet" href="css/styles.css" /></noscript>
   </head>
@@ -56,10 +54,13 @@
     <header class="site-header">
       <div class="container header-inner">
         <div class="logo">
-          <span class="logo-icon" aria-hidden="true">
-            <!-- small badge SVG -->
-            🧑‍🤝‍🧑
-          </span>
+          <img
+            src="favicon.svg"
+            alt="eizyGroup logo"
+            class="logo-icon"
+            width="40"
+            height="40"
+          />
           <span class="logo-text">eizyGroup</span>
         </div>
         <nav class="main-nav" aria-label="Main navigation">
